- Refactor modules - pytorch tutorials

--- a/pytorch/predict_ratings.ipynb
+++ b/pytorch/predict_ratings.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "n_users = 5\n",
-    "n_items = 10"
+    "n_items = 5"
    ]
   },
   {
@@ -26,7 +26,7 @@
     "from mf import *\n",
     "\n",
     "ratings = sprand(n_users, n_items, density=0.2, format='csr')\n",
-    "ratings.data = (np.random.randint(1, 5, size=ratings.nnz).astype(np.float64))"
+    "ratings.data = np.ndarray()#(np.random.randint(1, 5, size=ratings.nnz).astype(np.float64))"
    ]
   },
   {
